--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -4,14 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This will be the Applied Data Science Capstone Project Notebook"
+    "# The Applied Data Science Capstone Project Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Exploration for "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More will be added"
+    "## Introduction/Business Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A chef/restaurant owner would like to open a new restaurant in downtown Denver.   She wants to locate the restaurant near breweries since her food will complement nicely with local brews.  Her wish for a location is to be near breweries that are well rated and have many people going to them since that will help get people to her location.  The task here is to help find such a location."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will leverage Foursquare results to explore breweries within a certain radius of location in downtown Denver.  After making the identification of these breweries, we will pull more information from Fourquare, including ratings, the number of 'likes', the number of pictures taken, and the number of 'likes'.  "
    ]
   },
   {
@@ -23,30 +53,6 @@
     "import pandas as pd\n",
     "import numpy as np"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ('Hello Capstone Project Course!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
