--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -8,12 +8,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Exploration for "
+    "## Exploration for new restaurant in Denver"
    ]
   },
   {
@@ -50,9 +48,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The start of import modules for the project\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
