--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -80,13 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'PO20HWYZH4GUFMPG2GDAE0G0PRMY4TQFWWD0VWBLVEYSF53V' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'VZX04DVLWX3RULAKOM02GNQ2X4A0IGNIQR1ZJLRTOTBDW5UT' # your Foursquare Secret\n",
-    "ACCESS_TOKEN = 'LM0H15F3R1VT11LVRBPSDIEZ4GZTQNK540ONAV1NILBRZELB' # your FourSquare Access Token\n",
+    "CLIENT_ID = 'x' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'x' # your Foursquare Secret\n",
+    "ACCESS_TOKEN = 'x' # your FourSquare Access Token\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value"
    ]
@@ -94,7 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Denver\n",
